# Verdict

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  LICENSE  README.md  README_CN.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/actions/verdict/: action.yml
.github/workflows/: ci.yml  example-verdict-check.yml  release.yml
src/: config.rs  git_diff.rs  lint.rs  main.rs  marketplace.rs  models.rs  pipeline.rs  plugin.rs  report.rs  security.rs  semantic.rs  wasm_plugin.rs
testdata/: .gitkeep  test_code.py
vscode-verdict/: package.json
vscode-verdict/src/: extension.ts
